--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-server.address=192.168.92.7
+server.address=192.168.189.7
 server.port=8000
 
+server.max-http-header-size=131072
 
 spring.datasource.url=jdbc:mysql://localhost:3306/mycarapp?useSSL=false
 spring.datasource.username=root
@@ -9,3 +10,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
+
+# Set the maximum size allowed for individual files
+spring.servlet.multipart.max-file-size=10MB
+
+# Set the maximum size allowed for multipart/form-data requests
+spring.servlet.multipart.max-request-size=10MB
